sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

	var lgr = getNombreValeurs();
	
	do {
		for(i<-0 to lgr-2) {
			if(plusPetit(i:Int, i+1:Int) == false)
				echange(i, i+1);
		}
		
	} 
	
}
